Finally fixed these issues on IOS

--- a/src/app.css
+++ b/src/app.css
@@ -1,19 +1,8 @@
-﻿:root {
-	--sat: env(safe-area-inset-top);
-	--sar: env(safe-area-inset-right);
-	--sab: env(safe-area-inset-bottom);
-	--sal: env(safe-area-inset-left);
-}
-
-html,
+﻿html,
 body {
-	margin: 0;
+    margin: 0;
 	padding: 0;
-	height: 100%;
-	max-height: 100%;
 	overflow: hidden;
-	position: fixed;
-	width: 100%;
 	touch-action: none;
 	overscroll-behavior: none;
 }
